tests/functional/lang/eval-fail-symmetric-eq-throw-abort.err.exp
error:
       … while calling the 'throw' builtin
         at /pwd/lang/eval-fail-symmetric-eq-throw-abort.nix:1:2:
            1| (throw "x") == (abort "y")
             |  ^
            2|

       error: x
